chore: add more tasks
